sfdx-source/force-app/main/default/objects/Work_Order_Processor__e/fields/Partition_Key__c.field-meta.xml
<CustomField>
    <fullName>Partition_Key__c</fullName>
    <label>Partition Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>