sfdx-source/force-app/main/default/objects/Work_Order_Processor__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>LEM-24197: It stores the data required for processing by the service layer corresponding to the topic. The format may vary by use-case; it may store set of record ids or JSON string. The service layer will process the payload as needed.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>