sfdx-source/force-app/main/default/objects/Work_Order_Processor__e/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>LEM-24197: It stores use-case for which event is fired. It is used for identifying service layer for further payload processing.</description>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>